--- a/ice_experimenter/package.xml
+++ b/ice_experimenter/package.xml
@@ -15,6 +15,7 @@
   <build_depend>apc_robot</build_depend>
   <build_depend>sound_play</build_depend>
   <build_depend>trajectory_generator</build_depend>
+  <build_depend>data_recorder</build_depend>
 
   <run_depend>cmake_modules</run_depend>
   <run_depend>ice_msgs</run_depend>
