--- a/ice_experimenter/cfg/experiment.yaml
+++ b/ice_experimenter/cfg/experiment.yaml
@@ -14,7 +14,9 @@ trajectory_Nx: 3
 trajectory_Ny: 4
 trajectory_dx: 0.07
 trajectory_dy: 0.08
-trajectory_dt: 0.1;
+
+interpolation_dt: 0.1
+interpolation_steps: 25
 
 torso_height: 0.13
 joints_l: [0.449875,0.119194,1.61072,-1.91529,3.2495,-1.4646,1.5743]
