--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -182,13 +182,13 @@ nnNum_Joints          : 7  # DOF
 #  r   = (qd_m - qd) + lambda*(q_m - q);
 # Kv*r = Kv*(qd_m - qd) + Kv*lambda*(q_m - q);
 
-#nnNum_Outputs         : 6  # Cartesian
-#nn_Kv                 : [2,2,2,1,1,1]
-#nn_lambda             : [20,20,20,10,10,10]
+#nnNum_Outputs         : 6  # Cartesian / Quaternion
+#nn_Kv                 : [2,2,2,1,1,1,1]
+#nn_lambda             : [20,20,20,10,10,10,10]
 
 nnNum_Outputs         : 3
-nn_Kv                 : [1,1,1]
-nn_lambda             : [10,10,10]
+nn_Kv                 : [2,2,2]
+nn_lambda             : [20,20,20]
 
 #nnNum_Outputs         : 1
 #nn_Kv                 : [1]
@@ -238,7 +238,7 @@ saturation:
 #############################
 # Posture control           #
 #############################
-k_posture: 500.0
+k_posture: 25.0
 jacobian_inverse_damping: 0.01
 joint_feedforward:
   l_shoulder_pan_joint: 3.33
@@ -257,13 +257,13 @@ joint_feedforward:
   r_wrist_roll_joint: 0.0727
 #[0.467279,0.38766,0.850325,-1.88652,3.09594,-1.28368,-3.89919];
 posture:
-  l_shoulder_pan_joint: 0.4
-  l_shoulder_lift_joint: 0.4
-  l_upper_arm_roll_joint: 0.8
-  l_elbow_flex_joint: -1.8
-  l_forearm_roll_joint: 3.14
-  l_wrist_flex_joint: -1.3
-  l_wrist_roll_joint: -3.9
+  l_shoulder_pan_joint: 0.79
+  l_shoulder_lift_joint: 0
+  l_upper_arm_roll_joint: 1.6
+  l_elbow_flex_joint: 9999
+  l_forearm_roll_joint: 9999
+  l_wrist_flex_joint: 9999
+  l_wrist_roll_joint: 9999
   r_shoulder_pan_joint: -0.5
   r_shoulder_lift_joint: 0.0
   r_upper_arm_roll_joint: -1.5
