Updated launch files.

--- a/ice_experimenter/cfg/experiment_nn.yaml
+++ b/ice_experimenter/cfg/experiment_nn.yaml
@@ -11,15 +11,16 @@ data_dir: exp
 
 #trajectory_path: ABCFIHGDA DGHIFCBA DBFHDHFBDA
 #trajectory_path: ACIGAGICADBFHDHFBDA
-trajectory_path: ABEA
-trajectory_origin: [0.48,0.08,-0.05]
+trajectory_path: ABEDA
+#trajectory_origin: [0.48,0.08,-0.05]
+trajectory_origin: [0.70,-0.10,-0.05]
 trajectory_Nx: 3
 trajectory_Ny: 4
 trajectory_dx: 0.124
 trajectory_dy: 0.124
 
-interpolation_dt: 0.005
-interpolation_steps: 400
+interpolation_dt: 0.01
+interpolation_steps: 500
 
 torso_height: 0.13
 joints_l: [0.449875,0.119194,1.61072,-1.91529,3.2495,-1.4646,1.5743]
