--- a/ice_robot_controllers/CMakeLists.txt
+++ b/ice_robot_controllers/CMakeLists.txt
@@ -80,6 +80,9 @@ pr2_enable_rpath(ice_robot_controllers)
 add_library(nn_controller include/csl/nn_controller.cpp)
 target_link_libraries(nn_controller ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 
+add_library(nn_estimator include/csl/nn_estimator.cpp)
+target_link_libraries(nn_estimator ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+
 add_library(jt_controller include/ice_robot_controllers/jt_cartesian_controller.cpp)
 target_link_libraries(jt_controller ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 
