--- a/ice_experimenter/cfg/experiment_nn.yaml
+++ b/ice_experimenter/cfg/experiment_nn.yaml
@@ -10,7 +10,7 @@ data_topics: [/pr2_adaptNeuroController/experimentDataState]
 data_fnames: [data]
 data_path: /home/sven/Dropbox/0_Data
 data_dir: exp
-data_recording: false
+data_recording: true
 
 #trajectory_path: ABCFIHGDA DGHIFCBA DBFHDHFBDA
 #trajectory_path: ACIGAGICADBFHDHFBDA
