Loading NN estimator parameters from file; reversed sign in update function.

--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -170,6 +170,14 @@ cartIniYaw           :  0.0
 #nom_joint_6  :  0.0    # 0.1114     # -0.0436174
 
 #############################
+# NN estimator              #
+#############################
+
+nne_kappa : 0.001
+nne_G     : [1,1,1,1,1,1]
+nne_H     : [1,1,1,1,1,1]
+
+#############################
 # NN controller             #
 #############################
 
