--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -173,9 +173,10 @@ cartIniYaw           :  0.0
 # NN estimator              #
 #############################
 
-nne_kappa : 0.001
-nne_G     : [1,1,1,1,1,1]
-nne_H     : [1,1,1,1,1,1]
+nne_kappa : 0.01
+nne_alpha : 0.001
+nne_G     : [10,10,10,10,10,10]
+nne_H     : [10,10,10,10,10,10]
 
 #############################
 # NN controller             #
