--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -100,7 +100,7 @@ joint_vel_filter : 1.0
 # Is the reference trajectory x_r or q_r set externally or estimated
 # If externalRefTraj is false the human intent x_i is used
 # i.e. an admittance model is used to generate x_i from f_h the force from the FT sensor
-externalRefTraj    : true
+externalRefTraj    : false
 
 # Human intent estimation
 useHumanIntent     : false
@@ -172,15 +172,16 @@ cartIniYaw           :  0.0
 #############################
 # NN estimator              #
 #############################
-useHumanIntentNN: true
+computeHumanIntentNN : true
+useHumanIntentNN     : true
 nne_kappa : 0.01
 nne_alpha : 1.0
 nne_G     : [10,10,10,10,10,10]
 nne_H     : [10,10,10,10,10,10]
 
 nne_useLimits: true
-nne_Pmin  : [10,10,10,10,10,10,10,10,10,10,10,10]
-nne_Pmax  : [90,90,90,90,90,90,90,90,90,90,90,90]
+nne_Pmin  : [0.01,0.01,0.01,0.01,0.01,0.01,0.01,0.01,0.01,0.01,0.01,0.01]
+nne_Pmax  : [100,100,100,100,100,100,100,100,100,100,100,100]
 
 #############################
 # NN controller             #
