Pose filter for NN estimator prediction.

--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -183,6 +183,8 @@ nne_useLimits: true
 nne_Pmin  : [0.05,0.05,0.05,0.05,0.05,0.05,0.05,0.05,0.05,0.05,0.05,0.05]
 nne_Pmax  : [50,50,50,50,50,50,50,50,50,50,50,50]
 
+nne_pose_filter : 0.01
+
 #############################
 # NN controller             #
 #############################
