Settings used for NAC experiments on June 26, 2017.

--- a/ice_experimenter/cfg/experiment.yaml
+++ b/ice_experimenter/cfg/experiment.yaml
@@ -6,21 +6,22 @@ command_pose_topic: /l_cart/command_pose
 
 data_topics: [/l_cart/state/x/pose,/l_cart/state/x_desi/pose, /l_cart/state/xd,/l_cart/state/xd_desi, /l_cart/state/F, /ft_sensor/ft_compensated/wrench,/l_cart/state/tau_pose,/l_cart/state/tau_posture]
 data_fnames: [pos_act,pos_des,vel_act,vel_des,f_control,f_human,tau_pose,tau_posture]
-data_path: /home/sven/Dropbox/2017_Rehab/Data_June12_SubC
+data_path: /home/sven/Dropbox/0_Data
 data_dir: exp
+data_recording: true
 
 #trajectory_path: ABCFIHGDA DGHIFCBA DBFHDHFBDA
 #trajectory_path: ABEA
 #trajectory_origin: [0.48,0.08,-0.05]
 trajectory_path: ACIGAGICADBFHDHFBDA
-trajectory_origin: [0.49,-0.10,-0.05]
+trajectory_origin: [0.50,-0.10,-0.05]
 trajectory_Nx: 3
 trajectory_Ny: 3
 trajectory_dx: 0.125
 trajectory_dy: 0.125
 
-interpolation_dt: 0.06
-interpolation_steps: 40
+interpolation_dt: 0.01
+interpolation_steps: 500
 
 torso_height: 0.13
 joints_l: [0.449875,0.119194,1.61072,-1.91529,3.2495,-1.4646,1.5743]
