--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -100,7 +100,7 @@ joint_vel_filter : 1.0
 # Is the reference trajectory x_r or q_r set externally or estimated
 # If externalRefTraj is false the human intent x_i is used
 # i.e. an admittance model is used to generate x_i from f_h the force from the FT sensor
-externalRefTraj    : false
+externalRefTraj    : true
 
 # Human intent estimation
 useHumanIntent     : false
@@ -173,7 +173,7 @@ cartIniYaw           :  0.0
 # NN estimator              #
 #############################
 computeHumanIntentNN : true
-useHumanIntentNN     : true
+useHumanIntentNN     : false
 nne_kappa : 0.01
 nne_alpha : 1.0
 nne_G     : [10,10,10,10,10,10]
@@ -183,7 +183,7 @@ nne_useLimits: true
 nne_Pmin  : [0.05,0.05,0.05,0.05,0.05,0.05,0.05,0.05,0.05,0.05,0.05,0.05]
 nne_Pmax  : [50,50,50,50,50,50,50,50,50,50,50,50]
 
-nne_pose_filter : 0.01
+nne_pose_filter : 0.10
 
 #############################
 # NN controller             #
