Fixed size of G, H in NN estimator.

--- a/ice_robot_controllers/config/pr2_controller.yaml
+++ b/ice_robot_controllers/config/pr2_controller.yaml
@@ -176,8 +176,8 @@ computeHumanIntentNN : true
 useHumanIntentNN     : true
 nne_kappa : 0.01
 nne_alpha : 1.0
-nne_G     : [10,10,10,10,10,10]
-nne_H     : [10,10,10,10,10,10]
+nne_G     : [10,10,10,10,10,10, 10,10,10,10,10,10, 10,10,10,10,10,10, 10]
+nne_H     : [10,10,10,10,10,10, 10,10,10,10,10,10, 10,10,10,10,10,10, 10]
 
 nne_useLimits: true
 nne_Pmin  : [0.05,0.05,0.05,0.05,0.05,0.05,0.05,0.05,0.05,0.05,0.05,0.05]
